# VTKToNumpy

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CIReports.yml  CITests.yml  docs.yml  python-package.yml  python-publish.yml
tests/: conftest.py  test_vtkgrid.py  test_vtkreader.py
vtktonumpy/: __init__.py  vtkgrid.py  vtkreader.py
