[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vtktonumpy"
version = "0.0.0"
description = "Read VTK rectilinear grid files and output as N-dimensional NumPy arrays"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
  { name="Declan B. Gaylo", email="dgaylo@mit.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
  "numpy",
  "vtk>=9.1",
]

[project.urls]
"Homepage" = "https://github.com/dgaylo/VTKToNumpy"
"Bug Tracker" = "https://github.com/dgaylo/VTKToNumpy/issues"